--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<a href=""></a>
 			<a href="Devs.html">Developers and Designers</a>
 			<a href="Scotio.html">Scotio Series</a>
-			<a href="Index.html" id="current">Home Page</a>
+			<a href="index.html" id="current">Home Page</a>
 		</nav>
 	</body>
 </html>
