--- a/Devs.html
+++ b/Devs.html
@@ -24,7 +24,7 @@
 			<a href=""></a>
 			<a href="Devs.html" id="current" >Developers and Designers</a>
 			<a href="Scotio.html">Scotio Series</a>
-			<a href="Index.html" >Home Page</a>
+			<a href="index.html" >Home Page</a>
 		</nav>
 	</body>
 </html>
